Templates have been updated

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,20 +20,19 @@
             <label for="country-filter">Filter by Country:</label>
             <select id="country-filter">
                 <!-- Options will be populated dynamically -->
-                 <option value="all">Select Country</option>
+                <option value="all">Select Country</option>
             </select>
         </section>
         <section id="places-list">
             <!-- List of places will be populated dynamically -->
-            <ul id="row">
+            <ul id="places-list">
+                <!-- List items will be inserted here -->
             </ul>
-
         </section>
     </main>
     <footer>
         <p id="rights">&copy; 2024 HBnb Evolution. All rights reserved</p>
     </footer>
-    <script src="/static/index.js">
-</script>
+    <script src="/static/index.js"></script>
 </body>
 </html>
