--- a/templates/login.html
+++ b/templates/login.html
@@ -16,15 +16,16 @@
             <form id="login-form">
                 <div class="input-group">
                     <label for="email">Email:</label>
-                    <input type="email" id="username-id" name="email" required>
+                    <input type="email" id="email" name="email" required>
                 </div>
                 <div class="input-group">
                     <label for="password">Password:</label>
-                    <input type="password" id="password-id" name="password" required>
+                    <input type="password" id="password" name="password" required>
                 </div>
                 <button type="submit">Login</button>
                 <div id="error" style="display:none; color: red;"></div>
             </form>
+        </div>
     </main>
     <script src="/static/login.js"></script>
 </body>
